--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,8 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-0"
-  ],
+  "presets": ["react", "es2015", "stage-0"],
   "env": {
     "development": {
-      "plugins": [["react-transform", {
-        "transforms": [{
-          "transform": "react-transform-hmr",
-          "imports": ["react"],
-          "locals": ["module"]
-        }]
-      }]]
+      "presets": ["react-hmre"]
     }
   }
 }
