--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "socket.io": "^1.5.1",
+    "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
   },
