--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,18 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
+   "presets": [
+     "es2015",
+     "react",
+     "stage-0"
+   ],
+    "env": {
+      "development": {
+       "plugins": [["react-transform", {
+         "transforms": [{
+           "transform": "react-transform-hmr",
+           "imports": ["react"],
+           "locals": ["module"]
+         }]
+       }]]
+      }
     }
   }
-}
