--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "webpack-heroku-boilerplate",
   "version": "1.0.0",
   "description": "Simplest Heroku starter kit for React apps.",
-  "main": "./src/entry.js",
   "homepage": "https://github.com/wallacyyy/webpack-heroku",
   "author": "Leonardo Couto",
   "license": "MIT",
   "scripts": {
     "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
-    "start": "node server.js",
+    "start": "npm run clean && npm run devbuild && node server.js",
     "clean": "rimraf public",
     "devbuild": "NODE_ENV=development webpack --config ./webpack.dev.config.js --progress --colors"
   },
@@ -24,26 +23,35 @@
     "javascript"
   ],
   "dependencies": {
+    "axios": "^0.15.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
+    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "body-parser": "^1.15.2",
+    "bootstrap-material-design": "^0.5.10",
+    "css-loader": "^0.23.1",
     "es6-promise": "^4.0.5",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
+    "firebase": "^3.6.1",
     "fs": "0.0.1-security",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.1.1",
+    "lodash": "^4.17.2",
     "open": "0.0.5",
-    "react": "^0.14.8",
+    "react": "^15.3.1",
+    "react-bootstrap": "^0.30.6",
     "react-color": "^2.4.3",
-    "react-dom": "^0.14.8",
+    "react-dom": "^15.3.1",
     "react-router": "^3.0.0",
+    "sass-loader": "^3.2.3",
     "socket.io": "^1.5.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
@@ -58,6 +66,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "firebase": "^3.6.1",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.2.0",
     "socket.io": "^1.5.1",
