--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
+    "react-shapes": "^0.1.0",
     "sass-loader": "^3.2.0",
     "socket.io": "^1.5.1",
     "style-loader": "^0.13.1",
